# pepper_resources_management

./: LICENSE.md  Readme.md
pepper_arm_manager/: CMakeLists.txt  package.xml
pepper_arm_manager/include/pepper_arm_manager/: ArtificialLife.h  Side.h  pepper_arm_manager.h
pepper_arm_manager/src/: ArtificialLife.cpp  main.cpp  main_synchronised.cpp  pepper_arm_manager.cpp
pepper_arm_manager/test/: main.test  test.cpp
pepper_arm_manager_msgs/: CMakeLists.txt  package.xml
pepper_arm_manager_msgs/msg/: PrioritizedJointTrajectory.msg  PrioritizedPoint.msg  StateMachine.msg
pepper_base_manager/: CMakeLists.txt  package.xml
pepper_base_manager/include/pepper_base_manager/: ArtificialLife.h  pepper_base_manager.h
pepper_base_manager/src/: ArtificialLife.cpp  main.cpp  main_synchronised.cpp  pepper_base_manager.cpp
pepper_base_manager/test/: main.test  test.cpp
pepper_base_manager_msgs/: CMakeLists.txt  package.xml
pepper_base_manager_msgs/msg/: PrioritizedAngle.msg  PrioritizedTwist.msg  StateMachine.msg  StateMachineStatePrioritizedAngle.msg  StateMachineStatePrioritizedTwist.msg
pepper_head_human_following/: CMakeLists.txt  package.xml
pepper_head_human_following/src/: pepper_head_human_following.cpp
pepper_head_manager/: CMakeLists.txt  package.xml
pepper_head_manager/include/pepper_head_manager/: ArtificialLife.h  pepper_head_manager.h
pepper_head_manager/src/: ArtificialLife.cpp  main.cpp  main_synchronised.cpp  pepper_head_manager.cpp
pepper_head_manager/test/: main.test  test.cpp
pepper_head_manager_msgs/: CMakeLists.txt  package.xml
pepper_head_manager_msgs/msg/: StateMachine.msg  StateMachineStatePrioritizedJointTrajectory.msg
pepper_resources_synchronizer/pepper_resources_synchronizer/: CMakeLists.txt  package.xml
pepper_resources_synchronizer/pepper_resources_synchronizer/include/: pepper_resources_synchronizer.h
pepper_resources_synchronizer/pepper_resources_synchronizer/launch/: pepper_resources_synchronizer.launch
pepper_resources_synchronizer/pepper_resources_synchronizer/src/: pepper_resources_synchronizer.cpp
pepper_resources_synchronizer/pepper_resources_synchronizer_msgs/: CMakeLists.txt  package.xml
pepper_resources_synchronizer/pepper_resources_synchronizer_msgs/msg/: SubStateMachine_pepper_arm_manager_msgs.msg  SubStateMachine_pepper_base_manager_msgs.msg  SubStateMachine_pepper_head_manager_msgs.msg
pepper_resources_synchronizer/pepper_resources_synchronizer_msgs/srv/: MetaStateMachineRegister.srv
