<?xml version="1.0"?>
<package format="2">
  <name>pepper_head_human_following</name>
  <version>0.0.0</version>
  <description>The pepper_head_human_following package</description>

  <maintainer email="gbuisan@laas.fr">gbuisan</maintainer>
  <maintainer email="gsarthou@laas.fr">gsarthou</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pepper_head_manager_msgs</build_depend>
  <build_depend>resource_management</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>pepper_head_manager_msgs</build_export_depend>
  <build_export_depend>resource_management</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>pepper_head_manager_msgs</exec_depend>
  <exec_depend>resource_management</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>
